Fix row styling bug Fix time not showing on mobile for credit trades

--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -31,6 +31,8 @@
     .table-transparent tr
     {
         border:none;
+        border-top-left-radius: 0px !important;
+        border-top-right-radius: 0px !important;
     }
     .table-transparent
     {
